changing background color

--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
 	text-align: center;
-	background-color: silver;
+	/* background-color: silver; */
+	background-color: lightblue;
 }
 
 .header-image {
